Replaced all the default theme pro stickers

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 IS_DEMO=false
 
-APP_NAME=Laravel
+APP_NAME=Zeroman Admin
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:svoHMo9bAYfyq6jHaZK1MLpEtCQdDh42Rznp+dTEUbI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -12,9 +12,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=zeroman
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
