--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,19 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.4",
+        "jantinnerezo/livewire-alert": "^3.0",
         "laravel/framework": "^10.0",
         "laravel/tinker": "^2.6",
         "livewire/livewire": "^2.8"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^2.0",
+        "barryvdh/laravel-debugbar": "^3.10",
         "fakerphp/faker": "^1.17",
         "laravel/sail": "^1.12",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^10.0",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
